<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StuMangerSimple</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="uname">用户名 </string>
    <string name="upwd">密    码 </string>
    <string name="conf_upwd">确认密码 </string>
    <string name="register">注册 </string>
    <string name="cancel">取消</string>
    <string name="login">登录 </string>
    <string name="off">退出 </string>
    <string name="go_tel">拨打电话 </string>
    <string name="go_mess">发送短信</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="sexf">男</string>
    <string name="sexm">女</string>
    <string name="tel">手机号</string>
    <string name="add">新增</string>
    <string name="del">删除</string>
    <string name="refresh">刷新</string>
    <string name="managerUser">管理用户</string>
    <string name="mz">民族</string>
    <string name="xh">学号</string>
    <string name="sr">生日</string>
    <string name="bz">备注</string>
    <string name="choice">选择</string>
    <string name="submit">提交</string>
    <string name="choicePhoto">选择照片</string>

</resources>
