<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView 
            style="@style/register_line_Textview"           
            android:text="@string/uname"
            />
        <EditText 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/uname"
            android:layout_weight="1"
            android:id="@+id/regi_uname"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
         <TextView 
            style="@style/register_line_Textview"
            android:text="@string/upwd"
            />
        <EditText 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/upwd"
            android:layout_weight="1"
            android:id="@+id/regi_upwd"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
         <TextView 
            style="@style/register_line_Textview"
            android:text="@string/conf_upwd"
            />
        <EditText 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/conf_upwd"
            android:layout_weight="1"
            android:id="@+id/regi_upwd_conf"
            />
    </LinearLayout>
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
         <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/register_cancel"
            />
        <Button 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"      
            android:text="@string/register"      
            android:id="@+id/register_conf"
            />
    </LinearLayout>
</LinearLayout>